changes in backend

--- a/app.ipynb
+++ b/app.ipynb
@@ -4140,8 +4140,30 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 8,
    "id": "5b4bd3fa-0721-467c-a506-560474351b97",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "['preprocessor.pkl']"
+      ]
+     },
+     "execution_count": 8,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "import joblib\n",
+    "joblib.dump(preprocessor, 'preprocessor.pkl')\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "5766009d-b268-431b-980e-36924d593d8a",
    "metadata": {},
    "outputs": [],
    "source": []
